--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 @import "config";
 @import "menu";
+@import "mobile";
+
 * {
   box-sizing: border-box;
 }
@@ -20,20 +22,24 @@ h2,
 h3 {
   margin: 0;
   font-weight: 400;
+
   &.lg-heading {
     font-size: 6rem;
   }
+
   &.sm-heading {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
     background: rgba(lighten($primary-color, 2), 0.5);
   }
 }
+
 //links
 a {
   color: #fff;
   text-decoration: none;
 }
+
 //header
 header {
   position: fixed;
@@ -51,8 +57,10 @@ main {
 
   .icons {
     margin-top: 1rem;
+
     a {
       padding: 0.4rem;
+
       &:hover {
         color: $secondary-color;
         @include easeOut();
@@ -62,6 +70,7 @@ main {
 
   &#home {
     overflow: hidden;
+
     h1 {
       margin-top: 20vh;
     }
