--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -29,7 +29,20 @@ $background-opacity: 0.9;
   }
 }
 
-//Media Query Mixins
+// set Text Color
+@function set-text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  }
+
+  @else {
+    @return #fff
+  }
+
+  ;
+}
+
+// Media Query Mixins
 @mixin mediaSm {
   @media screen and (max-width: 500px) {
     @content;
