--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -12,6 +12,7 @@
     height: 3px;
     margin: 0 0 5px 0;
     background: #fff;
+    // background: set-text-color ($primary-color);
     @include easeOut;
   }
 
@@ -118,7 +119,8 @@
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 300;
-    color: #fff;
+    // color: #fff;
+    color: set-text-color ($primary-color);
     text-decoration: none;
     @include easeOut;
 
