work page and responsiveness

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,8 +1,16 @@
 // Widescreens
-@include mediaXl {}
+@include mediaXl {
+    .projects {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
 
 // Desktops and Laptops
-@include mediaLg {}
+@include mediaLg {
+    .projects {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
 
 // Tablets and Small Laptops
 @include mediaMd {
@@ -54,6 +62,9 @@
         grid-template-columns: 1fr;
     }
 
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 // Smartphones
@@ -69,5 +80,9 @@
             margin-top: 1rem;
             font-size: 5rem;
         }
+    }
+
+    .projects {
+        grid-template-columns: 1fr;
     }
 }
